# pdf-ocr

./: main.py  pyproject.toml
output_docling/1591/: document.md
output_docling/1591/tables/: table_1.csv  table_10.csv  table_11.csv  table_12.csv  table_13.csv  table_14.csv  table_15.csv  table_16.csv  table_17.csv  table_18.csv  table_19.csv  table_2.csv  table_20.csv  table_21.csv  table_22.csv  table_3.csv  table_4.csv  table_5.csv  table_6.csv  table_7.csv  table_8.csv  table_9.csv
output_docling_tables/1591/: table_1.csv  table_1.xlsx
output_marker/bs-en-1591-1-2024-calculation/: document.md
output_pdfplumber/bs-en-1591-1-2024-calculation/: table_1.csv  table_1.xlsx  table_1_raw.txt
